[DevTools] Use InspectorFrontendHost.readyForTest for layout tests.

Attempt #2. First one made http/tests/inspector/resource-tree/resource-tree-reload.html flaky.

BUG=597572

Review URL: https://codereview.chromium.org/1819243002

Cr-Commit-Position: refs/heads/master@{#383238}

Former-commit-id: bdb67c0b431bf1726f0d91626c952086a4346c5c