content/shell/renderer/layout_test/blink_test_runner.cc
@@ -429,12 +429,10 @@ void BlinkTestRunner::CloseDevTools() {
     agent->detach();
 }
 
-void BlinkTestRunner::EvaluateInWebInspector(long call_id,
+void BlinkTestRunner::EvaluateInWebInspector(int call_id,
                                              const std::string& script) {
-  WebDevToolsAgent* agent =
-      render_view()->GetMainRenderFrame()->GetWebFrame()->devToolsAgent();
-  if (agent)
-    agent->evaluateInWebInspector(call_id, WebString::fromUTF8(script));
+  Send(new ShellViewHostMsg_EvaluateInDevTools(
+      routing_id(), call_id, script));
 }
 
 std::string BlinkTestRunner::EvaluateInWebInspectorOverlay(
