content/shell/renderer/layout_test/blink_test_runner.h
@@ -91,7 +91,7 @@ class BlinkTestRunner : public RenderViewObserver,
   void ShowDevTools(const std::string& settings,
                     const std::string& frontend_url) override;
   void CloseDevTools() override;
-  void EvaluateInWebInspector(long call_id, const std::string& script) override;
+  void EvaluateInWebInspector(int call_id, const std::string& script) override;
   std::string EvaluateInWebInspectorOverlay(const std::string& script) override;
   void ClearAllDatabases() override;
   void SetDatabaseQuota(int quota) override;
